# sweet_osal_platform

./: .clang-format  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  C_CODING_GUIDELINES.md  LICENSE  README.md  emscripten_build.sh  loop.sh  loop_big_picture.sh  plan-for-memory.md  ralph.md  wow_github_monitoring.md
.github/workflows/: ci.yml  ci_pr.yml  pullrequest.yml
apps/: adbreverse.sh  bundle_for_android.sh  keyevent.sh  start_npm_with_clean_cache.sh
docs/: plan-to-update-sop.md
loops/: memory.md
scripts/: copy-ai-instructions.sh  win_build.bat
sop_src/: CMakeLists.txt  LibraryFiles.cmake
sop_src/buf_io/: buf_io.cpp  buf_io.hpp  buf_io_queue.cpp  buf_io_queue.hpp
sop_src/buf_io/dummy/: buf_tx_dummy.hpp
sop_src/buf_io/tests/: CMakeLists.txt  test_fragmentation.cpp  test_transport.cpp
sop_src/cmake/: CodeCoverage.cmake
sop_src/json_command/: json_command.cpp  json_command.hpp
sop_src/json_command/tests/: CMakeLists.txt  test_json_commands.cpp
sop_src/libsodium/: blake2b-compress-ref-noinline.c  libsodium_port.c
sop_src/mbedtls/: aes_alt.cpp  aes_alt.h  config.h  myconfig.h  myconfig.h.bak  sha256_alt.h  sha_alt.cpp  threading_alt.cpp  threading_alt.h  timing_alt.cpp  timing_alt.h
sop_src/mini_socket/: mini_socket.cpp  mini_socket.hpp  socket_setup.cpp
sop_src/osal/: cs_locker.cpp  cs_locker.hpp  cs_std_mutex_locker.hpp  cs_task_locker.cpp  cs_task_locker.hpp  endian_convert.cpp  endian_convert.h  mempools.cpp  mempools.h  osal.cpp  osal.h  osal_entropy.cpp  osal_entropy.hpp  osal_freertos.cpp  osal_posix.cpp  osal_random.cpp  osal_random.hpp  osal_stubs.cpp  osal_tirtos.cpp  osal_win32.cpp  platform_type.h  singleton_defs.hpp
sop_src/osal/test/: CMakeLists.txt  test_bool_type.cpp  test_bool_type_c.c  test_lists.cpp  test_macros_cpp.cpp  test_mempools.cpp  test_osal.cpp  test_osal_main.cpp  test_random.cpp  test_sstring.cpp
sop_src/phone_al/: json_commands.cpp  json_commands.hpp  json_handler.hpp  phone_al.cpp  phone_al.hpp  phone_al_uithread_runner.cpp  phone_al_uithread_runner.hpp
sop_src/phone_al/android/: jni_native.cpp  jni_native.h
sop_src/simple_plot/: ez_plot.hpp  simple_plot.cpp  simple_plot.hpp  simple_plot_interp.hpp
sop_src/simple_plot/tests/: CMakeLists.txt  test_simple_plot.cpp
sop_src/task_sched/: task_rescheduler.cpp  task_rescheduler.hpp  task_sched.cpp  task_sched.h  task_trigger.hpp
sop_src/tests/: gtest_test_wrapper.hpp  tests_gtest_micro.cpp  tests_gtest_micro.h
sop_src/tests/freertos/: FreeRTOSConfig.h  components.h  stubs.cpp
sop_src/tests/freertos/portable/MSVC-MingW/: port.c  portmacro.h
sop_src/tests/freertos/tests/: CMakeLists.txt  test_freertos.cpp
sop_src/utils/: abstract.hpp  ble_utils.h  buf_alloc.cpp  buf_alloc.hpp  byteq.c  byteq.cpp  byteq.h  byteq.hpp  cnv_utils.cpp  convert_utils.cpp  convert_utils.h  crc.cpp  crc.h  dl_list.cpp  dl_list.h  dl_list.hpp  enum_table.h  enum_table_names.h  file_find_and_open.cpp  file_find_and_open.hpp  file_utils.hpp  helper_macros.h  helper_utils.cpp  helper_utils.h  pack_pop.h  pack_push.h  platform_log.cpp  platform_log.h  q.hpp  ramfunc.h  simple_string.cpp  simple_string.hpp  sl_list.h  sl_list.hpp  token_bucket.hpp  util_vsnprintf.cpp  uuid.cpp  uuid.hpp  wordq.hpp
sop_src/utils/tests/: CMakeLists.txt  test_bool_type.cpp  test_crc.cpp  test_lists.cpp  test_macros_cpp.cpp  test_sstring.cpp  utils_test.cpp
src/: LibraryFiles.cmake
src/buf_io/dummy/: buf_rx_dummy.hpp
src/buf_io/tests/: CMakeLists.txt
src/mbedtls/: mbedtls_port.cpp  myconfig.h  sha512_alt.h
src/mini_socket/: socket_setup.hpp
src/osal/: cs_mutex_locker.cpp  cs_mutex_locker.hpp  osal.cpp
src/task_sched/: task_rescheduler.cpp  task_sched.cpp
src/utils/: ble_utils_cpp.cpp  buf_alloc.cpp  cnv_utils.hpp  enum_table_descriptions.h  packed.h  simple_string.cpp  simple_string.hpp  sl_list.cpp  util_vsnprintf.cpp  util_vsnprintf.h
test/: CMakeLists.txt  test_main.cpp
